...
          ],
        ),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            const AppText(
              'Total Others Owe You',
              fontSize: 14,
              color: AppColors.white,
            ),
            SizedBox(height: 8.h),
            const AppText(
              '\$1,036.00',
...
        ),
        GestureDetector(
          onTap: () {
            context.push(AppRouter.login);
          },
          child: AppText(
            'Sign In',
            fontSize: 14,
            fontWeight: FontWeight.w600,
            color: AppColors.primaryPurple,
          ),
        ),
      ],
...
